# dagbase

./: CMakeLists.txt  LICENSE  README.md
data/tests/Base64/: HairyMultipleGroups.lua  LuaFunction.lua  NoPadding.lua  NoPaddingMultipleGroups.lua  OnePadding.lua  OnePaddingMultipleGroups.lua  RepeatingBlock.lua  TwoPadding.lua  TwoPaddingMultipleGroups.lua
data/tests/ConfigurationElement/: SerialiseFunction.lua  SerialisePrimitives.lua
data/tests/DynamicBitset/: AllFalse.lua  AllFalseTwoBlocks.lua  AllTrue.lua  AllTrueTwoBlocks.lua  AndOneBlock.lua  AndTwoBlocks.lua  AnyFalse.lua  AnyFalseTwoBlocks.lua  AnyTrue.lua  AnyTrueTwoBlocks.lua  Assign.lua  AtFalse.lua  AtTrue.lua  ClearOne.lua  CountNone.lua  CountOne.lua  CountTwoAcrossTwoBlocks.lua  Empty.lua  EqualFalseNotSameSize.lua  EqualFalseSameSize.lua  EqualTrue.lua  FindFirstFromExistingInFirstBlock.lua  FindFirstFromExistingInSecondBlock.lua  FindFirstFromExistingInThirdBlock.lua  FindFirstFromNoneInFirstBlock.lua  FindFirstInFirstBlock.lua  FindFirstInSecondBlock.lua  FindFirstNone.lua  FindNextExistingCrossingBlocks.lua  FindNextExistingInFirstBlock.lua  FindNextExistingInSecondBlock.lua  FindNextExistingInThirdBlock.lua  FindNextNoneInFirstBlock.lua  FlipOff.lua  FlipOn.lua  GreaterEqualFalse.lua  GreaterEqualTrue.lua  GreaterFalse.lua  GreaterTrue.lua  IntersectsFalse.lua  (+42 more)
data/tests/DynamicEnum/: Empty.lua  Multiple.lua  One.lua
data/tests/DynamicMultiArray/: MultipleArrays.lua
data/tests/FixedVector/: EmplaceMany.lua  EmplaceMax.lua  EmplaceOne.lua  EmplaceTooMany.lua  PushThenPop.lua  Subscript.lua  Underflow.lua
data/tests/HierarchicalStateMachine/: HierarchicalState.lua  HierarchicalState_Complex.lua  HierarchicalState_Concurrent.lua  SimpleState.lua  multipleStates.lua  nestedStates.lua  onFooThenBar.lua  onFooThenBarInitial.lua  onMute.lua  onMuteInitial.lua  onMuteTransition.lua  onOneThenTwo.lua  onPlay.lua  recorder.lua
data/tests/IdentifierGenerator/: Mixture.lua  One.lua  RecycleOne.lua  ReuseOne.lua  Two.lua
data/tests/Lua/: BadFunction.lua  MultipleResults.lua  OneResult.lua  OutOfRangeResult.lua
data/tests/MetaProperty/: Colour.lua  NoSemantic.lua
data/tests/ParameterLookup/: Empty.lua  NoParameters.lua  OneIntegerParameter.lua  OneParameter.lua  OneParameterNotFound.lua  TwoParameters.lua  TwoParametersOneNotFound.lua
data/tests/RedBlackTree/: Child.lua  ChildOfRoot.lua  Empty.lua  LeftChild.lua  MultipleChildren.lua  NestedChild.lua  NestedChildFindBlack.lua  NestedChildPath.lua  ReplaceRoot.lua  Root.lua
data/tests/Searchable/: SearchableMap_oneElement.lua
data/tests/SignalSlot/: LuaSlot.lua  Simple.lua
data/tests/Status/: NodeID.lua  None.lua  PortID.lua  SignalPathID.lua
data/tests/VariantArray/: Bool.lua  Double.lua  Int64.lua  String.lua  UInt32.lua
etc/: setup_macos.sh.in
include/config/: Export.h  config.h.in  linux_config.h  macos_config.h  win32_config.h
include/core/: Atom.h  BaseDimension.h  ByteBuffer.h  Class.h  ClassDescription.h  CloningFacility.h  Colour.h  ConfigurationElement.h  Dimension.h  DynamicVisitor.h  Editable.h  Function.h  Graph.h  GraphNode.h  HierarchicalStateMachine.h  IdentifierGenerator.h  KeyGenerator.h  LuaInterface.h  MetaClass.h  MetaClassRegistration.h  MetaPort.h  MetaProperty.h  Node.h  NodeCategory.h  NodeDescriptor.h  NodeLibrary.h  Port.h  Property.h  PropertyBag.h  PropertyBagFactory.h  PropertyBinding.h  PropertyFormat.h  Reference.h  Signal.h  SignalPath.h  SignalPathDef.h  Snippet.h  StateMachine.h  Transfer.h  TypeRegistry.h  (+7 more)
include/io/: BackingStore.h  BinaryFormat.h  BinaryInputStream.h  BinaryOutputStream.h  FormatAgnosticInputStream.h  FormatAgnosticOutputStream.h  InputStream.h  MemoryBackingStore.h  MemoryInputStream.h  MemoryOutputStream.h  OutputStream.h  Stream.h  StreamFormat.h  TextFormat.h  TextInputStream.h  TextOutputStream.h
include/test/: TestUtils.h
include/util/: Base64.h  DebugPrinter.h  DummyMutex.h  DynamicBitset.h  DynamicEnum.h  DynamicMultiArray.h  ErrorHandler.h  FakeTimeProvider.h  FixedVector.h  Less.h  MultiArray.h  ParameterLookup.h  PrettyPrinter.h  RedBlackTree.h  Rope.h  Searchable.h  SearchableArray.h  SearchableMap.h  SearchableSet.h  TimeProvider.h  TypedBuffer.h  VectorMap.h  VectorMultimap.h  VectorSet.h  enums.h  errod.h
src/apps/DagBaseTest/: A.cpp  A.h  AtomTest.cpp  B.cpp  B.h  Base64Test.cpp  C.cpp  C.h  CMakeLists.txt  ConfigurationElementTest.cpp  DynamicBitsetTest.cpp  DynamicEnumTest.cpp  DynamicVisitorTest.cpp  FixedVectorTest.cpp  IdentifierGeneratorTest.cpp  LuaTest.cpp  MetaClassRegistration.h  MultiArrayTest.cpp  ParameterLookupTest.cpp  PropertyTest.cpp  RedBlackTreeTest.cpp  RoundTripTest.cpp  SearchableTest.cpp  SignalSlotTest.cpp  SnippetTest.cpp  StateMachineTest.cpp  StatusTest.cpp  StreamTest.cpp  TestClass.h  TestObject.h  UnitTest.cpp  VariantTest.cpp  VectorMapTest.cpp  VectorMapTest.h  VectorSetTest.cpp
src/core/: Atom.cpp  ByteBuffer.cpp  Class.cpp  ClassDescription.cpp  CloningFacility.cpp  Colour.cpp  ConfigurationElement.cpp  Dimension.cpp  DynamicEnum.cpp  Editable.cpp  Function.cpp  Graph.cpp  GraphNode.cpp  HierarchicalStateMachine.cpp  IdentifierGenerator.cpp  KeyGenerator.cpp  LuaInterface.cpp  MetaClass.cpp  MetaPort.cpp  MetaProperty.cpp  Node.cpp  NodeCategory.cpp  NodeLibrary.cpp  Port.cpp  Property.cpp  PropertyBag.cpp  PropertyBagFactory.cpp  PropertyBinding.cpp  SignalPath.cpp  SignalPathDef.cpp  Snippet.cpp  Transfer.cpp  TypeRegistry.cpp  Types.cpp  Unit.cpp  Variant.cpp  VariantArray.cpp  Vec2.cpp
src/io/: BinaryFormat.cpp  BinaryInputStream.cpp  BinaryOutputStream.cpp  FormatAgnosticInputStream.cpp  FormatAgnosticOutputStream.cpp  InputStream.cpp  MemoryBackingStore.cpp  MemoryInputStream.cpp  MemoryOutputStream.cpp  OutputStream.cpp  TextFormat.cpp  TextInputStream.cpp  TextOutputStream.cpp
src/test/: TestUtils.cpp
src/util/: Base64.cpp  DebugPrinter.cpp  DynamicMultiArray.cpp  ErrorHandler.cpp  FakeTimeProvider.cpp  ParameterLookup.cpp  PrettyPrinter.cpp  RedBlackTree.cpp  Rope.cpp  errod.cpp
(+1 files in other folders)
